now works when openacc is desactivated

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,6 +3,7 @@ set(TEST_FILES
 	final_wrapper.F90
 	final_wrapper_gpu.F90
 	get_stats.F90
+	get_stats_no_openacc.F90
 	init_owner2.F90
 	init_owner.F90
 	init_owner_gpu.F90
