--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,6 +5,7 @@ set(TEST_FILES
 	final_wrapper_gpu.F90
 	get_stats.F90
 	get_stats_no_openacc.F90
+	get_view.F90
 	init_owner2.F90
 	init_owner.F90
 	init_owner_gpu.F90
