--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,8 +42,14 @@ add_custom_command(
 	DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/dev_alloc_mod.fypp
 	VERBATIM)
 
+add_custom_command(
+	OUTPUT field_management_mod.F90
+	COMMAND fypp -m os -M ${CMAKE_CURRENT_SOURCE_DIR} -m fieldType ${CMAKE_CURRENT_SOURCE_DIR}/field_management_mod.fypp > field_management_mod.F90
+	DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/field_management_mod.fypp
+	VERBATIM)
 
-add_library(${LIBNAME} field_module.F90 abor1.F90 parkind1.F90 dev_alloc_mod.F90 dev_alloc.c)
+
+add_library(${LIBNAME} field_module.F90 abor1.F90 parkind1.F90 dev_alloc_mod.F90 dev_alloc.c field_management_mod.F90)
 target_link_libraries(${LIBNAME} PUBLIC OpenMP::OpenMP_Fortran)
 if(OpenACC_Fortran_FOUND AND USE_OPENACC)
 	target_link_libraries(${LIBNAME} PUBLIC OpenACC::OpenACC_Fortran)
