--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,9 +60,18 @@ add_custom_command(
 	DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/array_field_wrapper_mod.fypp
 	VERBATIM)
 
+add_custom_command(
+	OUTPUT field_gathscat_module.F90
+	COMMAND fypp -m os -M ${CMAKE_CURRENT_SOURCE_DIR} -m fieldType ${CMAKE_CURRENT_SOURCE_DIR}/field_gathscat_module.fypp > field_gathscat_module.F90
+	DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/field_gathscat_module.fypp
+	VERBATIM)
 
-add_library(${LIBNAME} field_module.F90 abor1.F90 parkind1.F90 dev_alloc_mod.F90 dev_alloc.c field_management_mod.F90 field_helper_module.F90 array_field_wrapper_mod.F90)
+add_library(${LIBNAME} field_module.F90 abor1.F90 parkind1.F90 dev_alloc_mod.F90 dev_alloc.c field_management_mod.F90 field_helper_module.F90 array_field_wrapper_mod.F90 field_gathscat_module.F90)
 target_link_libraries(${LIBNAME} PUBLIC OpenMP::OpenMP_Fortran)
+
+target_include_directories(${LIBNAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+
+
 if(OpenACC_Fortran_FOUND AND USE_OPENACC)
 	target_link_libraries(${LIBNAME} PUBLIC OpenACC::OpenACC_Fortran)
 endif()
