Split field_access_module.fypp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,19 +31,16 @@ if (NOT FYPP)
 endif()
 
 
-foreach (SUFF in ITEMS IM RM RB RD LM)
+foreach (SUFF IN ITEMS IM RM RB RD LM)
   string (TOLOWER ${SUFF} suff)
   foreach (RANK RANGE 2 5)
+    foreach (FUNC IN ITEMS "" _gathscat _access)
     add_custom_command(
-        OUTPUT field_${RANK}${suff}_module.F90
-	COMMAND fypp -DRANK=${RANK} -DSUFF='${SUFF}' -m os -M ${CMAKE_CURRENT_SOURCE_DIR} -m fieldType ${CMAKE_CURRENT_SOURCE_DIR}/field_ranksuff_module.fypp > field_${RANK}${suff}_module.F90
-	DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/field_ranksuff_module.fypp
+        OUTPUT field_${RANK}${suff}${FUNC}_module.F90
+	COMMAND fypp -DRANK=${RANK} -DSUFF='${SUFF}' -m os -M ${CMAKE_CURRENT_SOURCE_DIR} -m fieldType ${CMAKE_CURRENT_SOURCE_DIR}/field_ranksuff${FUNC}_module.fypp > field_${RANK}${suff}${FUNC}_module.F90
+	DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/field_ranksuff${FUNC}_module.fypp
 	VERBATIM)
-    add_custom_command(
-        OUTPUT field_${RANK}${suff}_gathscat_module.F90
-	COMMAND fypp -DRANK=${RANK} -DSUFF='${SUFF}' -m os -M ${CMAKE_CURRENT_SOURCE_DIR} -m fieldType ${CMAKE_CURRENT_SOURCE_DIR}/field_ranksuff_gathscat_module.fypp > field_${RANK}${suff}_gathscat_module.F90
-	DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/field_ranksuff_gathscat_module.fypp
-	VERBATIM)
+    endforeach ()
   endforeach ()
 endforeach ()
 
@@ -57,17 +54,23 @@ endforeach ()
 
 add_library(${LIBNAME}  
 
-            field_2im_module.F90 field_3im_module.F90 field_4im_module.F90 field_5im_module.F90 
-            field_2rm_module.F90 field_3rm_module.F90 field_4rm_module.F90 field_5rm_module.F90 
-            field_2rb_module.F90 field_3rb_module.F90 field_4rb_module.F90 field_5rb_module.F90 
-            field_2rd_module.F90 field_3rd_module.F90 field_4rd_module.F90 field_5rd_module.F90 
-            field_2lm_module.F90 field_3lm_module.F90 field_4lm_module.F90 field_5lm_module.F90 
+            field_2im_module.F90          field_3im_module.F90          field_4im_module.F90          field_5im_module.F90 
+            field_2rm_module.F90          field_3rm_module.F90          field_4rm_module.F90          field_5rm_module.F90 
+            field_2rb_module.F90          field_3rb_module.F90          field_4rb_module.F90          field_5rb_module.F90 
+            field_2rd_module.F90          field_3rd_module.F90          field_4rd_module.F90          field_5rd_module.F90 
+            field_2lm_module.F90          field_3lm_module.F90          field_4lm_module.F90          field_5lm_module.F90 
 
             field_2im_gathscat_module.F90 field_3im_gathscat_module.F90 field_4im_gathscat_module.F90 field_5im_gathscat_module.F90 
             field_2rm_gathscat_module.F90 field_3rm_gathscat_module.F90 field_4rm_gathscat_module.F90 field_5rm_gathscat_module.F90 
             field_2rb_gathscat_module.F90 field_3rb_gathscat_module.F90 field_4rb_gathscat_module.F90 field_5rb_gathscat_module.F90 
             field_2rd_gathscat_module.F90 field_3rd_gathscat_module.F90 field_4rd_gathscat_module.F90 field_5rd_gathscat_module.F90 
             field_2lm_gathscat_module.F90 field_3lm_gathscat_module.F90 field_4lm_gathscat_module.F90 field_5lm_gathscat_module.F90 
+
+            field_2im_access_module.F90   field_3im_access_module.F90   field_4im_access_module.F90   field_5im_access_module.F90 
+            field_2rm_access_module.F90   field_3rm_access_module.F90   field_4rm_access_module.F90   field_5rm_access_module.F90 
+            field_2rb_access_module.F90   field_3rb_access_module.F90   field_4rb_access_module.F90   field_5rb_access_module.F90 
+            field_2rd_access_module.F90   field_3rd_access_module.F90   field_4rd_access_module.F90   field_5rd_access_module.F90 
+            field_2lm_access_module.F90   field_3lm_access_module.F90   field_4lm_access_module.F90   field_5lm_access_module.F90 
 
             field_module.F90 field_basic_module.F90 abor1.F90 parkind1.F90 dev_alloc_module.F90 dev_alloc.c 
             field_factory_module.F90 field_access_module.F90 field_array_wrapper_module.F90 field_gathscat_module.F90)
