fix test case for init debug value

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,6 +21,7 @@ set(TEST_FILES
 	init_owner2.F90
 	init_owner_delayed_init_value.F90
 	init_owner_gpu.F90
+	init_owner_init_debug_value.F90
 	init_owner_init_value.F90
 	init_owner_openmp.F90
 	init_wrapper.F90
