--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,6 @@ set (LIBNAME field_api)
 set (CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR}/modules)
 
 option(FYPP_PATH "Path to the fypp preprocessor")
-option(INIT_DEBUG_VALUE "Option to initialise fields without user specified value with a debug value")
-
-if(INIT_DEBUG_VALUE)
-	add_compile_definitions("MACRO_INIT_DEBUG_VALUE=.TRUE.")
-else()
-	add_compile_definitions("MACRO_INIT_DEBUG_VALUE=.FALSE.")
-endif()
 
 get_filename_component (Fortran_COMPILER_NAME ${CMAKE_Fortran_COMPILER} NAME)
 
@@ -54,7 +47,7 @@ if (NOT FYPP_PATH)
 endif()
 message (STATUS "fypp is ${FYPP_PATH}")
 
-set (SOURCES field_basic_module.F90 dev_alloc.c)
+set (SOURCES field_basic_module.F90 field_init_debug_value_module.F90 dev_alloc.c)
 
 foreach (SUFF IN ITEMS IM RM RB RD LM)
   string (TOLOWER ${SUFF} suff)
