bugfix:a test was using the old way of setting debug value

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,9 +10,10 @@ set(TEST_FILES
 	gather_scatter.F90
 	get_stats.F90
 	get_view.F90
-	init_delayed_owner.F90
 	init_owner.F90
 	init_owner2.F90
+	init_owner_delayed.F90
+	init_owner_delayed_init_debug_value.F90
 	init_owner_delayed_init_value.F90
 	init_owner_gpu.F90
 	init_owner_init_debug_value.F90
