--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,10 +13,14 @@ set(TEST_FILES
 	init_owner.F90
 	init_owner2.F90
 	init_owner_delayed.F90
+	init_owner_delayed_gpu.F90
 	init_owner_delayed_init_debug_value.F90
 	init_owner_delayed_init_value.F90
 	init_owner_gpu.F90
 	init_owner_init_debug_value.F90
+	init_owner_init_debug_value_gpu.F90
+	init_owner_init_delayed_debug_value_gpu.F90
+	init_owner_init_delayed_value_gpu.F90
 	init_owner_init_value.F90
 	init_owner_openmp.F90
 	init_wrapper.F90
