--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,9 @@ project(field_api VERSION 1.0 LANGUAGES Fortran)
 set(LIBNAME field_api)
 set (CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR}/modules)
 
+## find required packages
+ecbuild_find_package(OpenMP COMPONENTS Fortran REQUIRED)
+
 option(FYPP_PATH "Path to the fypp preprocessor")
 
 get_filename_component (Fortran_COMPILER_NAME ${CMAKE_Fortran_COMPILER} NAME)
@@ -36,11 +39,6 @@ if (USE_OPENACC)
 
 endif ()
 
-find_package (OpenMP)
-
-if (NOT OpenMP_Fortran_FOUND)
-  message (FATAL_ERROR "Could not find OpenMP support.")
-endif ()
 
 find_package (fiat REQUIRED) 
 
