Added find fiat and ecbuild_add_library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ if( NOT ecbuild_FOUND )
   include(cmake/field_api_fetchcontent_ecbuild.cmake)
 endif()
 
-## define project and field_api target
+## define project and field_api target name
 project(field_api VERSION 1.0 LANGUAGES Fortran)
 set(LIBNAME field_api)
 set (CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR}/modules)
@@ -53,15 +53,41 @@ if(ACC AND CMAKE_Fortran_COMPILER_ID MATCHES PGI|NVIDIA|NVHPC)
   set(CMAKE_Fortran_FLAGS "-acc=gpu -Mlarge_arrays -gopt -gpu=cc70 -Minfo=accel,all,ccff")
 endif ()
 
+## find fiat
+ecbuild_add_option(
+    FEATURE FIELD_API_FIAT_BUILD
+    DEFAULT ON
+    DESCRIPTION "Import oml_mod, parkind and abor1 from fiat"
+)
+if( ${HAVE_FIELD_API_FIAT_BUILD} )
+  ecbuild_find_package(fiat REQUIRED) 
+else()
+  if(NOT FIELD_API_UTIL_MODULE_PATH)
+    ecbuild_critical("If not building with fiat, then the path for utility modules must be specified")
+  endif()
 
-find_package (fiat REQUIRED) 
+  ecbuild_info( "Checking for FIAT components in ${FIELD_API_UTIL_MODULE_PATH}" )
 
-set (CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -I${fiat_BASE_DIR}/module/fiat -I${fiat_BASE_DIR}/include/fiat")
+  find_file( ABOR1_PATH abor1.F90 REQUIRED
+      HINTS ${FIELD_API_UTIL_MODULE_PATH} ${FIELD_API_UTIL_MODULE_PATH}/src/fiat/util
+  )
+  ecbuild_info( "Found ABOR1: ${ABOR1_PATH}" )
 
-if (fiat_HAVE_DOUBLE_PRECISION)
-  set (CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -I${fiat_BASE_DIR}/module/parkind_dp")
-elseif (fiat_HAVE_SINGLE_PRECISION)
-  set (CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -I${fiat_BASE_DIR}/module/parkind_sp")
+  find_file( OML_PATH oml_mod.F90 REQUIRED
+      HINTS ${FIELD_API_UTIL_MODULE_PATH} ${FIELD_API_UTIL_MODULE_PATH}/src/fiat/oml
+  )
+  ecbuild_info( "Found OML: ${OML_PATH}" )
+
+  find_file( PARKIND1_PATH parkind1.F90 REQUIRED
+      HINTS ${FIELD_API_UTIL_MODULE_PATH} ${FIELD_API_UTIL_MODULE_PATH}/src/parkind
+  )
+  ecbuild_info( "Found PARKIND1: ${PARKIND1_PATH}" )
+  list(APPEND srcs ${ABOR1_PATH} ${OML_PATH} ${PARKIND1_PATH})
+endif()
+
+set(prec dp)
+if(fiat_HAVE_SINGLE_PRECISION)
+  set(prec sp)
 endif ()
 
 set (SOURCES field_basic_module.F90 field_init_debug_value_module.F90 dev_alloc.c)
@@ -75,7 +101,7 @@ foreach (SUFF IN ITEMS IM RM RB RD LM)
         ${CMAKE_CURRENT_SOURCE_DIR}/field_RANKSUFF${FUNC}_module.fypp > field_${RANK}${suff}${FUNC}_module.F90
         DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/field_RANKSUFF${FUNC}_module.fypp
         VERBATIM)
-      list (APPEND SOURCES "field_${RANK}${suff}${FUNC}_module.F90")
+      list(APPEND srcs "field_${RANK}${suff}${FUNC}_module.F90")
     endforeach ()
   endforeach ()
 endforeach ()
@@ -86,19 +112,22 @@ foreach (SRC IN ITEMS dev_alloc_module field_factory_module field_access_module
 	  COMMAND ${FYPP} -m os -M ${CMAKE_CURRENT_SOURCE_DIR} -m fieldType ${CMAKE_CURRENT_SOURCE_DIR}/${SRC}.fypp > ${SRC}.F90
     DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${SRC}.fypp
     VERBATIM)
-  list (APPEND SOURCES "${SRC}.F90")
+  list(APPEND srcs "${SRC}.F90")
 endforeach ()
 
-add_library (${LIBNAME} ${SOURCES})
-set_property (TARGET ${LIBNAME} PROPERTY C_STANDARD 99)
-
-target_link_libraries (${LIBNAME} PUBLIC OpenMP::OpenMP_Fortran)
-
-target_include_directories (${LIBNAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
-
-if (OpenACC_Fortran_FOUND AND USE_OPENACC)
-  target_link_libraries (${LIBNAME} PUBLIC OpenACC::OpenACC_Fortran)
-endif ()
+## add field_api target
+ecbuild_add_library(
+    TARGET ${LIBNAME}
+    SOURCES ${srcs}
+    PRIVATE_LIBS
+       $<${HAVE_FIELD_API_FIAT_BUILD}:fiat>
+       $<${HAVE_FIELD_API_FIAT_BUILD}:parkind_${prec}>
+    PUBLIC_LIBS
+       OpenMP::OpenMP_Fortran
+       $<${HAVE_ACC}:OpenACC::OpenACC_Fortran>
+    )
+set_property(TARGET ${LIBNAME} PROPERTY C_STANDARD 99)
+target_include_directories(${LIBNAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_executable (main.x main.F90)
 target_link_libraries (main.x PUBLIC ${LIBNAME} -L${fiat_BASE_DIR}/lib64 -L${fiat_BASE_DIR}/lib -lfiat -Wl,-rpath,${fiat_BASE_DIR}/lib64 -Wl,-rpath,${fiat_BASE_DIR}/lib)
